--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -29,7 +29,7 @@ The free version of Affinity includes all the features you’ll likely need for 
 
 We'll learn how to use Affinity to edit exported ggplots and transform them into (mini) infographics. Download both the [PNG](https://drive.google.com/file/d/1AHn-jJn80-li6W7fBjtX5sJEemJQ0l1J/view?usp=sharing){target="_blank"} and [PDF](https://drive.google.com/file/d/16H9M_mDSzyYqS7c_yB06jQIfSYhLH-Ce/view?usp=sharing){target="_blank"} versions of this plot ahead of class.
 
-### C. (Optional, but recommended) Create an account with The Nount Project 
+### C. (Optional, but recommended) Create an account with The Noun Project 
 
 [The Noun Project](https://thenounproject.com/){target="_blank"} provides access to millions of visual assets (symbols, icons, photos) for your graphic design needs. 
 
