Test adding scrolly

--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -59,7 +59,7 @@ We'll learn how to use Affinity to edit exported ggplots and transform them into
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [Lab 6 slides: saving ggplots](lab/ARCHIVE/LAB-SLIDES-saving-ggplots-jobs.qmd){target="_blank"} | *see pre-lab prep* | *see Lab 6 slides* |
+|  | [Closeread How To](lab/LAB-EXERCISE-scrollytelling.qmd){target="_blank"} ||
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
