Add more scrollytelling content

--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -44,16 +44,17 @@ We'll learn how to use Affinity to edit exported ggplots and transform them into
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
 
-::: {.callout-important}
-## TODO
-- closeread scrollytelling?
-:::
 
+None! 
+
+<!--
 ### A. Prepare a `week6-lab.qmd` file
 
 1. Add a new blank file to your class repo at the following location: `EDS-240-class-examples/week6/week6-lab.qmd.` Fill out the necessary YAML information (title, author, date + any other information you find helpful).
 
+
 2. Copy over the contents from your `TEMPLATE-typography.qmd` file -- we'll be iterating on this code during lab section.
+-->
 
 ## {{< fa comments title="two speech bubbles" >}} Lab Materials {#lab-materials}
 
