--- a/course-materials/lab/LAB-EXERCISE-scrollytelling.qmd
+++ b/course-materials/lab/LAB-EXERCISE-scrollytelling.qmd
@@ -1,37 +1,44 @@
 ---
 title: "Week 6 Lab: Exercise"
 subtitle: "Scrollytelling"
-description: "February 12^th^, 2026"
+description: "February 12^th^, 2026" 
 format: 
   closeread-html:
     remove-header-space: true
+    page-layout: full
     code-copy: hover
     theme: 
       - closeread-styles.scss
 ---
 
 
+<!-- =============================== -->
+<!-- INTRO                           -->
+<!-- =============================== -->
+
 ::::{.cr-section layout="sidebar-right"}
 
 @cr-scrollytelling 
   
-:::{#cr-scrollytelling .body-text-xl style="margin-top: 200px; margin-left: 50px;"}
-Have you ever wanted to go beyond the traditional structure of a qmd? Is the interactivity on your website not cutting it for you? Scrollytelling is a powerful data storytelling tool that allows you to invite your reader to "take a walk in the data's shoes". The `closeread` quarto extension provides flexibility on interactive customizations to tell your story the way you want. 
+:::{#cr-scrollytelling .body-text-l style="margin-top: 200px; margin-left: 50px;"}
+Have you ever wanted to go beyond the traditional structure of a `.qmd`? Scrollytelling is a powerful data storytelling technique that invites your reader to *walk in the data's shoes* — revealing insights step by step as they scroll. The `closeread` Quarto extension makes this easy, giving you flexible, interactive tools to tell your story exactly the way you want. 
 :::
 
 :::{.body-text-l style="margin-left: 50px;"}
-Let's walk through how you create your own scrollytelling story with `closeread`! 
+Let's walk through how to create your own scrollytelling story with `closeread`! 
 :::
 
 ::::
 
 
+<!-- =============================== -->
+<!-- SETUP                           -->
+<!-- =============================== -->
+
 ::::{.cr-section layout="sidebar-right"}
 
-@cr-setup
-
-:::{#cr-setup .body-text-l style="margin-top: 200px; margin-left: 50px;"}
-To start, make sure you have added the closeread quarto extension. Navigate to your project directory where you plan to use closeread. Scroll to find out what to paste into your terminal!
+:::{#cr-setup .body-text-xl style="margin-top: 200px; margin-left: 50px;"}
+First, make sure you've added the closeread Quarto extension. Navigate to your project directory where you plan to use closeread. Scroll to see what to paste into your terminal!
 :::
 
 :::{focus-on="cr-setup"}
@@ -44,76 +51,99 @@ quarto add qmd-lab/closeread
 ```
 :::
 
-
 :::{.body-text-m}  
 <br>
-Type **"Yes"** when prompted to allow the extension to execute code
+Type **"Yes"** when prompted to allow the extension to execute code.
 :::
+
+:::{.body-text-m} 
+Next, create a `.qmd` with the following YAML front matter. This is where you'll build out your scrollyteller!
+:::
+
+```{bash}
+#| eval: false
+#| echo: true
+
+---
+title: "My Closeread Story""
+format: 
+  closeread-html:
+---
+```
 
 :::
 
 ::::
 
+
+<!-- =============================== -->
+<!-- TRANSITION: LET'S Go            -->
+<!-- =============================== -->
 
 ::::{.cr-section layout="sidebar-right"}
 
 @cr-lets-get-started
 
 :::{#cr-lets-get-started .body-text-xl .teal-text style="margin-top: 200px; margin-left: 75px;"}
-Now that the setup is done, let's get started!!
+Setup done — let's get started!
 :::
 
 ::::
 
 
-::::{.cr-section layout="overlay-center"}
+<!-- =============================== -->
+<!-- MAIN COMPONENTS                 -->
+<!-- =============================== -->
 
+::::{.cr-section layout="sidebar-right"}
 :::{focus-on="cr-title" style="height: 100vh;"}
-:::
 
+:::
 :::{#cr-title .body-text-xl .dark-blue-text style="padding: 40px; margin-top: 200px"}
 **The Main Components**
 :::
-
 :::{focus-on="cr-stickies" style="height: 100vh;"}
 :::
-
 :::{#cr-stickies .body-text-l .dark-blue-text style="padding: 40px; text-align: left;"}
 **The Main Components**
-
-[**Stickies:**]{.teal-text} Think of the stickies as a sticky note - stuck in place! As the user starts to scroll, stickies remain in place. Stickies can take the form of text, an image, or a code chunk. 
+<br>
+[**Stickies:**]{.teal-text} Think of a sticky like a sticky note — stuck in place! As the user scrolls, stickies remain fixed on screen. They can be text, an image, a plot, or a code chunk. 
 :::
-
 :::{focus-on="cr-triggers" style="height: 100vh;"}
 :::
-
 :::{#cr-triggers .body-text-l .dark-blue-text style="padding: 40px; text-align: left;"}
 **The Main Components**
-
-[**Stickies:**]{.teal-text} Think of the stickies as a sticky note - stuck in place! As the user starts to scroll, stickies remain in place. Stickies can take the form of text, an image, or a code chunk. 
-
-[**Triggers:**]{.teal-text} Prompt the moving text, image, or plot that moves past your stickies.
+<br>
+[**Stickies:**]{.teal-text} Think of a sticky like a sticky note — stuck in place! As the user scrolls, stickies remain fixed on screen. They can be text, an image, a plot, or a code chunk. 
+<br>
+[**Triggers:**]{.teal-text} The scrolling content — text, images, or plots — that moves past your stickies and controls what appears on screen.
 :::
-
 ::::
 
+<!-- =============================== -->
+<!-- STICKY & TRIGGER DEMO           -->
+<!-- =============================== -->
 
 ::::{.cr-section layout="sidebar-right"}
 
-[This is an example of a trigger! It moves as you scroll!]{.body-text-l} @cr-stickie-ex
+[This is an example of a trigger! It moves as you scroll.]{.body-text-l} @cr-stickie-ex
 
-[This is a second example of a trigger! Notice how our stickie is still there!]{.body-text-l} @cr-stickie-ex
+[This is a second trigger. Notice how the sticky is still there!]{.body-text-l} @cr-stickie-ex
 
 :::{#cr-stickie-ex .body-text-xl .teal-text style="margin-left: 50px;"}
-This is an example of a stickie!! As you scroll, the text will stay in place until you get to a new section. 
+This is an example of a sticky! As you scroll, this text stays in place until you reach a new section. 
 :::
 
 ::::
 
 
+<!-- =============================== -->
+<!-- TRIGGERS CAN BE PLOTS           -->
+<!-- =============================== -->
+
 ::::{.cr-section layout="sidebar-right"}
 
-[Triggers can also be plots! Scroll to see]{.body-text-l} @cr-stickie-ex2
+[Triggers can also be plots! Scroll to see.]{.body-text-l} @cr-stickie-ex2
 
 ```{r}
 #| message: false
@@ -153,12 +183,16 @@ ggplot(penguins, aes(x = flipper_length_mm, y = body_mass_g, color = species)) +
 ::::
 
 
+<!-- =============================== -->
+<!-- SECTION SYNTAX                  -->
+<!-- =============================== -->
+
 ::::{.cr-section layout="sidebar-right"}
 
 :::{focus-on="cr-section-syntax" .body-text-l style="margin-top: 200px; margin-left: 50px;"}
-Every closeread document is built from sections. Within each section, you'll specify a layout that controls where your narrative and sticky content appear. There are five layout options to choose from. 
+Every closeread document is built from **sections**. Within each section, you specify a layout that controls where your narrative and sticky content appear. There are five layout options to choose from.
 
-[Note: Any content that is not within a closeread section will apear as regular markdown on a qmd, with no scrolling aspect to it]{.teal-text}
+[Note: Any content outside a closeread section will appear as regular markdown — no scrolling behavior.]{.teal-text}
 :::
 
 :::{#cr-section-syntax style="font-size: 28px; padding: 40px;"}
@@ -169,51 +203,58 @@ Content goes here!
 ```
 :::
 
-
-
-
 :::{focus-on="cr-section-syntax"}
-[**sidebar-left** (default)]{.teal-text}
+[**sidebar-left**]{.teal-text} (default) 
 
 Narrative scrolls on the left
 
-[**sidebar-right** ]{.teal-text}
+[**sidebar-right**]{.teal-text} 
 
 Narrative scrolls on the right
 
-[**overlay-left**]{.teal-text}  
-Full-screen sticky with floating narrative on left
+[**overlay-left**]{.teal-text} 
 
-[**overlay-center**]{.teal-text}  
+Full-screen sticky with floating narrative on the left
+
+[**overlay-center**]{.teal-text} 
+
 Full-screen sticky with centered floating narrative
 
-[**overlay-right**]{.teal-text}  
-Full-screen sticky with floating narrative on right
+[**overlay-right**]{.teal-text} 
 
-<br><br>
+Full-screen sticky with floating narrative on the right
+
+<br>
 [**Choose the layout that best showcases your story!**]{.dark-blue-text .body-text-m}
 :::
-
 
 ::::
 
 
-::::{.cr-section layout="overlay-center"}
+<!-- =============================== -->
+<!-- SCROLL BACK REMINDER            -->
+<!-- =============================== -->
+
+::::{.cr-section layout="center"}
 
 :::{focus-on="cr-scroll-back" style="height: 50vh;"}
 :::
 
-:::{#cr-scroll-back .body-text-xl .dark-blue-text style="padding: 40px; text-align: center; margin-top: 40px"}
-Scroll back up if the terms **stickie** or **trigger** aren't making sense yet. Otherwise, keep scrolling to find out how to code them!
+:::{#cr-scroll-back .body-text-xl .dark-blue-text style="padding: 60px; text-align: center; margin-top: 40px "}
+Scroll back up if **sticky** or **trigger** aren't clicking yet. Otherwise,keep scrolling to learn how to code them!
 :::
 
 ::::
 
 
+<!-- =============================== -->
+<!-- SYNTAX: STICKIES & TRIGGERS     -->
+<!-- =============================== -->
+
 ::::{.cr-section layout="sidebar-left"}
 
 :::{focus-on="cr-sticky-syntax"}
-[To create a sticky, wrap your element in a fenced div and provide an ID prefixed with `cr-`. Stickies will look like this in your qmd file:]{.body-text-m}
+[To create a sticky, wrap your element in a fenced div and give it an ID prefixed with `cr-`:]{.body-text-m}
 :::
 
 :::{#cr-sticky-syntax .body-text-m style="padding: 40px; margin-top:150px"}
@@ -251,15 +292,18 @@ More text here too!
 :::
 ```
 
-- `@cr-` for single paragraph triggers
+- `@cr-` for single-paragraph triggers
 - `focus-on=` for multi-block triggers
 :::
 
 ::::
 
 
+<!-- =============================== -->
+<!-- PUTTING IT ALL TOGETHER         -->
+<!-- =============================== -->
 
-::::{.cr-section layout="overlay-center"}
+::::{.cr-section layout="sidebar-right"}
 
 :::{focus-on="cr-together-title" style="height: 50vh;"}
 :::
@@ -273,13 +317,13 @@ More text here too!
 
 ::::{.cr-section layout="sidebar-right"}
 
-[👈 That box on the left? That's a **sticky**. It has the ID `#cr-together`. Look at the code in the sticky — you can find exactly where it's defined!]{.body-text-m} @cr-together
+[👈 That box on the left? That's a **sticky** with the ID `#cr-together`. Look at the code — you can see exactly where it's defined!]{.body-text-m} @cr-together
 
 [This line of text is a **trigger**. Notice how it ends with `\@cr-together`? That's what links it to the sticky and keeps it locked in place while you scroll.]{.body-text-m} @cr-together
 
 [This is a third trigger — still referencing the same sticky. Scroll through the code on the left and find all three triggers!]{.body-text-m} @cr-together
 
-[Once you scroll past this section, the sticky disappears. That's because stickies only live inside their `cr-section` wrapper.]{.body-text-m} @cr-together
+[Once you scroll past this section, the sticky disappears. Stickies only live inside their `cr-section` wrapper.]{.body-text-m} @cr-together
 
 :::{#cr-together .body-text-m style="padding: 40px; border-left: 5px solid #047C90; margin-top: 30px;"}
 [**The code creating this exact section:**]{.teal-text}
@@ -305,8 +349,11 @@ The code creating this exact section!
 ::::
 
 
+<!-- =============================== -->
+<!-- GOING DEEPER HEADER             -->
+<!-- =============================== -->
 
-:::::{.cr-section layout="overlay-center"}
+::::{.cr-section layout="sidebar-right"}
 
 :::{focus-on="cr-advanced-title" style="height: 50vh;"}
 :::
@@ -318,7 +365,11 @@ The code creating this exact section!
 ::::
 
 
-::::{.cr-section layout="overlay-center"}
+<!-- =============================== -->
+<!-- FEATURE 1: HIGHLIGHTING         -->
+<!-- =============================== -->
+
+::::{.cr-section layout = "sidebar-right"}
 
 :::{focus-on="cr-hl-section-title" style="height: 30vh;"}
 :::
@@ -328,9 +379,6 @@ The code creating this exact section!
 :::
 
 ::::
-
-
-
 
 
 ::::{.cr-section layout="sidebar-right"}
@@ -355,7 +403,7 @@ The most reliable way to use `highlight=` in closeread is with **code blocks**. 
 
 :::{focus-on="cr-hl-code-demo" highlight="6,7,8"}
 :::{.body-text-m}
-**`highlight="6,7,8"`** — lines 6 through 8. This is where the ggplot is being built. Highlighting a range of lines is great for walking through a block of logic step by step.
+**`highlight="6,7,8"`** — lines 6 through 8. This is where the ggplot is being built. Highlighting a range of lines is great for walking through logic step by step.
 :::
 :::
 
@@ -387,12 +435,17 @@ ggplot(penguins_clean, aes(x = bill_length_mm,
 /* numbers refer to line numbers in the code block */
 
 /* single line */
-:::{focus-on="cr-YOUR-STICKY" highlight="1"}
+:::{focus-on="cr-YOUR-STICKY" highlight="4"}
 Narrative text here.
 :::
 
-/* multiple lines */
+/* multiple lines (comma-separated) */
 :::{focus-on="cr-YOUR-STICKY" highlight="1,2"}
+Narrative text here.
+:::
+
+/* range of lines (dash) */
+:::{focus-on="cr-YOUR-STICKY" highlight="4-6"}
 Narrative text here.
 :::
 
@@ -411,16 +464,17 @@ library(palmerpenguins) ← line 2
 ::::
 
 
+<!-- =============================== -->
+<!-- FEATURE 2: SCALE-BY             -->
+<!-- =============================== -->
 
-
-
-::::{.cr-section layout="overlay-center"}
+::::{.cr-section layout = "sidebar-right"}
 
 :::{focus-on="cr-scale-title" style="height: 30vh;"}
 :::
 
 :::{#cr-scale-title .body-text-xl .teal-text style="padding: 40px; text-align: center;"}
-**Feature 2: Transforms — `scale-by`**
+**Feature 2: Scaling with `scale-by`**
 :::
 
 ::::
@@ -433,11 +487,11 @@ library(palmerpenguins) ← line 2
 :::
 
 :::{focus-on="cr-scale-demo" scale-by="1.5"}
-[**`scale-by="1.5"`** — zoomed in 50%. The species clusters are now much easier to compare. Values above 1 zoom in.]{.body-text-m}
+[**`scale-by="1.5"`** — zoomed in 50%. The species clusters are easier to compare. Values above 1 zoom in.]{.body-text-m}
 :::
 
 :::{focus-on="cr-scale-demo" scale-by="2.5"}
-[**`scale-by="2.5"`** — zoomed in 150%. Great for dense plots with small labels.]{.body-text-m}
+[**`scale-by="2.5"`** — zoomed in 150%. Great for dense plots or small labels.]{.body-text-m}
 :::
 
 :::{focus-on="cr-scale-demo" scale-by="0.7"}
@@ -495,24 +549,239 @@ Zoomed out.
 ::::
 
 
+<!-- =============================== -->
+<!-- FEATURE 3: PAN-TO               -->
+<!-- =============================== -->
 
+::::{.cr-section layout = "sidebar-right"}
 
-
-
-
-::::{.cr-section layout="overlay-center"}
-
-:::{focus-on="cr-scss-title" style="height: 30vh;"}
+:::{focus-on="cr-pan-title" style="height: 30vh;"}
 :::
 
-:::{#cr-scss-title .body-text-xl .teal-text style="padding: 40px; text-align: center;"}
-**Feature 3: Custom Styling with SCSS**
+:::{#cr-pan-title .body-text-xl .teal-text style="padding: 40px; text-align: center;"}
+**Feature 3: Panning with `pan-to`**
 :::
 
 ::::
 
 
-::::{.cr-section layout="overlay-center"}
+::::{.cr-section layout="sidebar-right"}
+
+:::{focus-on="cr-pan-demo"}
+:::{.body-text-m}
+`pan-to` lets you slide the viewer's focus across a sticky — perfect for large images, wide plots, or directing attention to a specific region. Scroll to watch the plot shift!
+:::
+:::
+
+:::{focus-on="cr-pan-demo" pan-to="25%,0%"}
+:::{.body-text-m}
+**`pan-to="25%,0%"`** — panned 25% of its width to the right. Positive percentages shift right (x) and down (y).
+:::
+:::
+
+:::{focus-on="cr-pan-demo" pan-to="-25%,0%"}
+:::{.body-text-m}
+**`pan-to="-25%,0%"`** — panned 25% to the left. Negative values shift left (x) and up (y).
+:::
+:::
+
+:::{focus-on="cr-pan-demo" pan-to="0%,30%"}
+:::{.body-text-m}
+**`pan-to="0%,30%"`** — panned 30% downward. This is great for focusing on axis labels or legends at the bottom of a chart.
+:::
+:::
+
+:::{focus-on="cr-pan-demo" pan-to="25%,-20%" scale-by="1.8"}
+:::{.body-text-m}
+**`pan-to="25%,-20%" scale-by="1.8"`** — pan and scale *combined*! Pan shifts the view while scale-by zooms in. Together, they let you spotlight a specific region of any sticky.
+:::
+:::
+
+:::{focus-on="cr-pan-demo"}
+:::{.body-text-m}
+Back to the default view. Like all focus effects, a trigger with no attributes resets the sticky.
+:::
+:::
+
+[Here's the code for the combined pan + scale trigger:]{.body-text-m} @cr-pan-code
+
+:::{#cr-pan-demo style="margin-top: 30px;"}
+```{r}
+#| echo: false
+#| message: false
+#| warning: false
+ggplot(penguins, aes(x = flipper_length_mm, y = body_mass_g, color = species)) +
+  geom_point(size = 3, alpha = 0.7) +
+  labs(
+    title = "Flipper Length vs. Body Mass",
+    x = "Flipper Length (mm)",
+    y = "Body Mass (g)",
+    color = "Species"
+  ) +
+  theme_minimal(base_size = 14)
+```
+:::
+
+:::{#cr-pan-code .body-text-m style="padding: 40px; border-left: 5px solid #047C90;"}
+[**`pan-to` syntax:**]{.teal-text}
+```
+/* pan-to takes x,y values in % or px */
+
+/* Pan right */
+:::{focus-on="cr-YOUR-STICKY" pan-to="25%,0%"}
+Narrative text.
+:::
+
+/* Pan left and up */
+:::{focus-on="cr-YOUR-STICKY" pan-to="-25%,-20%"}
+Narrative text.
+:::
+
+/* Combine with scale-by for a spotlight effect */
+:::{focus-on="cr-YOUR-STICKY" pan-to="25%,-20%" scale-by="1.8"}
+Zoomed in and shifted!
+:::
+
+/* Using pixel values instead of percentages */
+:::{focus-on="cr-YOUR-STICKY" pan-to="100px,-50px"}
+Shifted by exact pixels.
+:::
+```
+
+[Tip: `pan-to` works especially well with images and large plots where you want to guide the reader's eye to a specific area.]{.teal-text}
+:::
+
+::::
+
+
+<!-- =============================== -->
+<!-- FEATURE 4: ZOOM-TO              -->
+<!-- =============================== -->
+
+::::{.cr-section layout="sidebar-right"}
+
+:::{focus-on="cr-zoom-title" style="height: 30vh;"}
+:::
+
+:::{#cr-zoom-title .body-text-xl .teal-text style="padding: 40px; text-align: center;"}
+**Feature 4: Zooming with `zoom-to`**
+:::
+
+::::
+
+
+::::{.cr-section layout="sidebar-right"}
+
+:::{focus-on="cr-zoom-demo"}
+:::{.body-text-m}
+`zoom-to` combines panning and scaling into one attribute — it automatically pans *and* zooms to a specific line of code or a named span. This is perfect for code walkthroughs!
+:::
+:::
+
+:::{focus-on="cr-zoom-demo" zoom-to="1"}
+:::{.body-text-m}
+**`zoom-to="1"`** — zoomed into line 1. The view pans and scales so this line fills most of the viewport.
+:::
+:::
+
+:::{focus-on="cr-zoom-demo" zoom-to="12"}
+:::{.body-text-m}
+**`zoom-to="12"`** — jumped straight to line 12. Unlike manually combining `pan-to` and `scale-by`, `zoom-to` handles both automatically.
+:::
+:::
+
+:::{focus-on="cr-zoom-demo" zoom-to="20"}
+:::{.body-text-m}
+**`zoom-to="20"`** — now focused on line 20. Notice how it pans vertically *and* scales in one smooth motion.
+:::
+:::
+
+:::{focus-on="cr-zoom-demo" hlz = "4"}
+:::{.body-text-m}
+You can also use `hlz` ("highlight + zoom") to highlight a line while zooming to it — the best of both worlds!
+:::
+:::
+
+[Here's the syntax:]{.body-text-m} @cr-zoom-code
+
+:::{#cr-zoom-demo style="padding: 40px; margin-top: 30px;"}
+````r
+library(ggplot2)
+library(palmerpenguins)
+
+penguins_clean <- na.omit(penguins)
+
+ggplot(penguins_clean, aes(x = bill_length_mm,
+                           y = bill_depth_mm,
+                           color = species)) +
+  geom_point(size = 3, alpha = 0.7) +
+  theme_minimal()
+  
+penguins_clean <- na.omit(penguins)
+
+ggplot(penguins_clean, aes(x = bill_length_mm,
+                           y = bill_depth_mm,
+                           color = species)) +
+  geom_point(size = 3, alpha = 0.7) +
+  theme_minimal()
+  
+penguins_clean <- na.omit(penguins)
+
+ggplot(penguins_clean, aes(x = bill_length_mm,
+                           y = bill_depth_mm,
+                           color = species)) +
+  geom_point(size = 3, alpha = 0.7) +
+  theme_minimal()
+````
+:::
+
+:::{#cr-zoom-code .body-text-m style="padding: 40px; border-left: 5px solid #047C90;"}
+[**`zoom-to` and `hlz` syntax:**]{.teal-text}
+```
+/* zoom-to a specific line number */
+:::{focus-on="cr-YOUR-STICKY" zoom-to="4"}
+Zoomed to line 4!
+:::
+
+/* zoom-to a named span (for line blocks) */
+:::{focus-on="cr-YOUR-STICKY" zoom-to="cr-my-span"}
+Zoomed to the span!
+:::
+
+/* hlz = highlight + zoom in one attribute */
+:::{focus-on="cr-YOUR-STICKY" hlz="4"}
+Line 4 is highlighted AND zoomed!
+:::
+
+/* hlz with a named span */
+:::{focus-on="cr-YOUR-STICKY" hlz="cr-my-span"}
+Span is highlighted AND zoomed!
+:::
+```
+
+[Note: `zoom-to` overrides `pan-to` and `scale-by` if they're on the same trigger, since it handles both. Use `hlz` when you want zoom + highlight together.]{.teal-text}
+:::
+
+::::
+
+
+<!-- =============================== -->
+<!-- FEATURE 5: SCSS                 -->
+<!-- =============================== -->
+
+::::{.cr-section layout="sidebar-right"}
+
+:::{focus-on="cr-scss-title" style="height: 30vh;"}
+:::
+
+:::{#cr-scss-title .body-text-xl .teal-text style="padding: 40px; text-align: center;"}
+**Feature 5: Custom Styling with SCSS**
+:::
+
+::::
+
+
+::::{.cr-section layout="sidebar-right"}
 
 :::{focus-on="cr-scss-what-title" style="height: 30vh;"}
 :::
@@ -528,7 +797,7 @@ Zoomed out.
 
 :::{focus-on="cr-scss-overview"}
 :::{.body-text-m style="margin-left: 50px;"}
-closeread works seamlessly with SCSS, giving you control over four major areas. Scroll to see each one!
+Closeread works seamlessly with SCSS, giving you control over four major areas. Scroll to see each one!
 :::
 :::
 
@@ -577,7 +846,7 @@ color: ...;
 ::::
 
 
-::::{.cr-section layout="overlay-center"}
+::::{.cr-section layout="sidebar-right"}
 
 :::{focus-on="cr-scss-how-title" style="height: 30vh;"}
 :::
@@ -599,7 +868,7 @@ Before writing any styles, you need two things: a `.scss` file and a link to it 
 
 :::{focus-on="cr-scss-setup-how" highlight="1,2,3,4,5,6,7"}
 :::{.body-text-m style="margin-left: 50px;"}
-[**Step 1 — Your YAML:**]{.teal-text} Add a `theme` key under `closeread-html` that points to your SCSS file. Make sure it's in the same folder as your `.qmd`.
+[**Step 1 — Your YAML:**]{.teal-text} Add a `theme` key under `closeread-html` that points to your SCSS file. Make sure it's in the same directory as your `.qmd`.
 :::
 :::
 
@@ -633,9 +902,9 @@ format:
 
 [Now let's look at each style category. On the left is the code for **background**, **stickies**, **narrative**, and **fonts** all in one file. Scroll through to see each block!]{.body-text-m} @cr-full-scss
 
-[**Background** targets `.cr-section`. Use `background-color` for a solid fill or `background-image` for a photo. Set `color` here too so your text stays readable against whatever background you choose.]{.body-text-m} @cr-full-scss
+[**Background** targets `.cr-section`. Use `background-color` for a solid fill or `background-image` for a photo. Set `color` here too so your text stays readable.]{.body-text-m} @cr-full-scss
 
-[**Sticky elements** target `.sticky-col-stack`. This is the container wrapping all your `:::{#cr-YOUR-ID}` content. Round the corners, add a shadow, give it a background — whatever fits your story.]{.body-text-m} @cr-full-scss
+[**Sticky elements** target `.sticky-col-stack` — the container wrapping your `:::{#cr-YOUR-ID}` content. Round the corners, add a shadow, give it a background — whatever fits your story.]{.body-text-m} @cr-full-scss
 
 [**Narrative elements** target `.narrative-col` — the scrolling text column. A semi-transparent `rgba` background works especially well with `overlay-*` layouts, where narrative floats over a full-screen sticky.]{.body-text-m} @cr-full-scss
 
@@ -695,3 +964,45 @@ body {
 ::::
 
 
+<!-- =============================== -->
+<!-- RECAP                           -->
+<!-- =============================== -->
+
+::::{.cr-section layout="overlay-center"}
+
+:::{focus-on="cr-recap-title" style="height: 50vh;"}
+:::
+
+:::{#cr-recap-title .body-text-xl .dark-blue-text style="padding: 40px; text-align: center;"}
+**Quick Recap**
+:::
+
+::::
+
+
+::::{.cr-section layout="sidebar-right"}
+
+:::{focus-on="cr-recap" style="height: 100vh;"}
+:::
+
+:::{#cr-recap .body-text-l .dark-blue-text style="padding: 40px; text-align: left;"}
+**What you've learned:**
+
+[**Stickies & Triggers**]{.teal-text} — the two building blocks of every closeread document.
+
+[**Sections & Layouts**]{.teal-text} — five layout options to control how narrative and stickies appear.
+
+[**Highlighting**]{.teal-text} — draw attention to specific lines of code.
+
+[**Scaling**]{.teal-text} — zoom in and out with `scale-by`.
+
+[**Panning**]{.teal-text} — slide focus across a sticky with `pan-to`.
+
+[**Zooming**]{.teal-text} — auto-pan and auto-scale to a line with `zoom-to`.
+
+[**SCSS Styling**]{.teal-text} — customize backgrounds, stickies, narrative, and fonts.
+
+Now go build your own scrollytelling story!
+:::
+
+::::
