Testing scss for week 6 page

--- a/course-materials/lab/LAB-EXERCISE-scrollytelling.qmd
+++ b/course-materials/lab/LAB-EXERCISE-scrollytelling.qmd
@@ -8,7 +8,7 @@ format:
     page-layout: full
     code-copy: hover
     theme: 
-      - closeread-styles.scss
+      - ../../closeread-styles.scss
 ---
 
 
