--- a/resources.qmd
+++ b/resources.qmd
@@ -70,6 +70,15 @@ toc: true
 - **[What to consider when choosing colors for race, ethnicity, and world regions](https://blog.datawrapper.de/colors-for-race-ethnicity-world-regions/), by Lisa Charlotte Muth (Datawrapper)** -- a blog post on choosing colors for visualizations with racial categories
 - **[An alternative to pink & blue: Colors for gender data](https://blog.datawrapper.de/gendercolor/), by Lisa Charlotte Muth (Datawrapper)** -- a blog post on avoiding gender stereotypes in your color choices
 
+## Scrollytelling {#scrollytelling}
+- **[Closeread Gallery](https://closeread.dev/gallery/)** -- A curated collection of 18 winning and runner-up entries from the Closeread Competition, plus feature demos showcasing what the framework is capable of. All scrollytelling stories include full source code, making it a great place to learn by example.
+
+- **[Learn Closeread](https://www.gastonsanchez.com/learn-closeread/modules/)**-- A structured, multi-module course by Gaston Sanchez that walks you through Closeread from the ground up. Covers everything from installation and basic setup to layout options, focus effects, styling, and building complete scrollytelling stories using text, images, equations, and plots.
+
+- **[CAUSE Student Data Scrollytelling Contest](https://www.causeweb.org/cause/contests/data-scrollytelling)** -- A student competition run by CAUSE (Consortium for the Advancement of Undergraduate Statistics Education) challenging participants to tell compelling data-driven stories through scrollytelling. A good place to find inspiration, see what students are making, or consider entering yourself.
+
+- **[Scrollytelling Examples](https://nrennie.rbind.io/scrollytelling/), by Nicola Rennie** -- A small collection of polished Closeread scrollytelling stories by data visualisation specialist Nicola Rennie, covering topics like a reimagined Gapminder animation, English monarchs and their marriages, and a lightning talk built with Closeread's zoom features. All source code is available on GitHub.
+
 ## A mix of a cool miscellaneous resources {#misc}
 
 ### podcasts {#podcasts}
