Fix lab material table formatting

--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -59,9 +59,9 @@ None!
 ## {{< fa comments title="two speech bubbles" >}} Lab Materials {#lab-materials}
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
-|-------------------|-------------------|--------------|[You should have a favorite data story](https://charliejhadley.github.io/you-should-have-a-fave-data-story/)
-|  | [Scrollytelling Tutorial](lab/LAB-EXERCISE-scrollytelling.qmd){target="_blank"} ||
-: {.hover .bordered tbl-colwidths="[35,35,30]"} 
+|---|---|---|
+| [You should have a favorite data story](https://charliejhadley.github.io/you-should-have-a-fave-data-story/) | [Scrollytelling Tutorial](lab/LAB-EXERCISE-scrollytelling.qmd){target="_blank"} | |
+: {.hover .bordered tbl-colwidths="[35,35,30]"}
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
