Update narrative definition to scrollytelling tutorial

--- a/course-materials/lab/LAB-EXERCISE-scrollytelling.qmd
+++ b/course-materials/lab/LAB-EXERCISE-scrollytelling.qmd
@@ -118,7 +118,7 @@ Setup done — let's get started!
 <br>
 <br>
 
-[**Triggers:**]{.teal-text} The scrolling content — text, images, or plots — that moves past your stickies and controls what appears on screen.
+[**Narrative/ Triggers**:]{.teal-text} The scrollable text column that tells your story. Narrative blocks become triggers when they include an @cr- reference, which activates or applies effects to a sticky as the block scrolls into view.
 :::
 ::::
 
