Change font size on main components page on scrolly tutorial

--- a/course-materials/lab/LAB-EXERCISE-scrollytelling.qmd
+++ b/course-materials/lab/LAB-EXERCISE-scrollytelling.qmd
@@ -102,7 +102,7 @@ Setup done — let's get started!
 :::
 :::{focus-on="cr-stickies" style="height: 100vh;"}
 :::
-:::{#cr-stickies .body-text-l .dark-blue-text style="padding: 40px; margin-top: 90px; text-align: left;"}
+:::{#cr-stickies .body-text-l .dark-blue-text style="padding: 40px; margin-top: 80px; text-align: left;"}
 **The Main Components**
 <br>
 <br>
@@ -110,7 +110,7 @@ Setup done — let's get started!
 :::
 :::{focus-on="cr-triggers" style="height: 100vh;"}
 :::
-:::{#cr-triggers .body-text-l .dark-blue-text style="padding: 40px; margin-top: 90px; text-align: left;"}
+:::{#cr-triggers .body-text-m .dark-blue-text style="padding: 40px; margin-top: 80px; text-align: left;"}
 **The Main Components**
 <br>
 <br>
