removed mention of using templates for lab

--- a/course-materials/week7.qmd
+++ b/course-materials/week7.qmd
@@ -45,7 +45,7 @@ We'll learn how to use [Font Awesome](https://fontawesome.com/){target="_blank"}
 1. Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week7/` folder.
 
 2. Review setup / wrangling / base plot code and make note of any questions you might have. Due to time constraints, we won't be live-coding our way through all code in class. However, we'll reserve some time to answer any questions before we jump into data viz {{< fa face-smile title="a smiling face" >}}. Specifically:
-    - Template 7 begins where we left off in creating our dumbbell plot (in the [amounts / rankings lecture](lecture-slides/SLIDES-amounts-rankings.qmd){target="_blank"}). Review the code under the `## Setup`, `## Wrangle Data` and `## Create plot` sections to re-familiarize yourself. *We'll use this single template for both lectures and lab this week.*
+    - Template 7 begins where we left off in creating our dumbbell plot (in the [amounts / rankings lecture](lecture-slides/SLIDES-amounts-rankings.qmd){target="_blank"}). Review the code under the `## Setup`, `## Wrangle Data` and `## Create plot` sections to re-familiarize yourself. *We'll use this single template for both lectures this week.*
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
